--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.3.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
